GG-19295 New configuration fields added to configurator. (#170)

--- a/modules/web-console/frontend/app/configuration/components/page-configure-advanced/components/cluster-edit-form/template.tpl.pug
+++ b/modules/web-console/frontend/app/configuration/components/page-configure-advanced/components/cluster-edit-form/template.tpl.pug
@@ -61,6 +61,9 @@ form(id='cluster' name='ui.inputForm' novalidate)
         //- Since ignite 2.1, deprecated in ignite 2.3
         include ./templates/persistence
 
+        //- Since ignite 2.5
+        include ./templates/rebalance
+
         //- Deprecated in ignite 2.3
         include ./templates/sql-connector
 
