--- a/modules/web-console/frontend/app/configuration/components/page-configure-advanced/components/cluster-edit-form/templates/client-connector.pug
+++ b/modules/web-console/frontend/app/configuration/components/page-configure-advanced/components/cluster-edit-form/templates/client-connector.pug
@@ -109,7 +109,7 @@ panel-collapsible(ng-show='$ctrl.available("2.3.0")' ng-form=form on-open=`ui.lo
                     name: '"ClientConnectorTcpNoDelay"',
                     disabled: `!${connectionEnabled}`
                 })
-            .pc-form-grid-col-60(ng-if='$ctrl.available("2.4.0")')
+            .pc-form-grid-col-30(ng-if='$ctrl.available("2.4.0")')
                 +form-field__number({
                     label: 'Idle timeout:',
                     model: `${connectionModel}.idleTimeout`,
@@ -119,6 +119,17 @@ panel-collapsible(ng-show='$ctrl.available("2.3.0")' ng-form=form on-open=`ui.lo
                     min: '-1',
                     tip: 'Idle timeout for client connections<br/>\
                          Zero or negative means no timeout'
+                })
+            .pc-form-grid-col-30(ng-if='$ctrl.available("2.5.0")')
+                +form-field__number({
+                    label: 'Handshake timeout:',
+                    model: `${connectionModel}.handshakeTimeout`,
+                    name: '"ClientConnectorHandshakeTimeout"',
+                    disabled: `!(${connectionEnabled})`,
+                    placeholder: '10000',
+                    min: '-1',
+                    tip: 'Handshake timeout for client connections<br/>\
+                        Zero or negative means no timeout'
                 })
             .pc-form-grid-col-60(ng-if-start='$ctrl.available("2.5.0")')
                 +form-field__checkbox({
