--- a/modules/web-console/frontend/app/components/permanent-notifications/template.pug
+++ b/modules/web-console/frontend/app/components/permanent-notifications/template.pug
@@ -15,8 +15,8 @@
 
 .wch-notification(ng-show='$ctrl.UserNotifications.visible && $ctrl.UserNotifications.message' ng-bind-html='$ctrl.UserNotifications.message')
 
-.wch-notification(ng-show='$ctrl.$rootScope.user.becomeUsed')
-    | You are currently viewing user #[strong {{$ctrl.$rootScope.user.firstName}} {{$ctrl.$rootScope.user.lastName}}] as administrator. #[a(ng-click='$ctrl.$rootScope.revertIdentity()') Revert to your identity?]
+.wch-notification(ng-show='($ctrl.user$|async:this).becomeUsed')
+    | You are currently viewing user #[strong {{($ctrl.user$|async:this).firstName}} {{($ctrl.user$|async:this).lastName}}] as administrator. #[a(ng-click='$ctrl.revertIdentity()') Revert to your identity?]
 
-.wch-notification.wch-notification--demo(ng-if='$ctrl.$rootScope.demoMode')
+.wch-notification.wch-notification--demo(ng-if='$ctrl.Demo.enabled')
     | You are now in Demo Mode. #[a(ng-click='$ctrl.closeDemo()') Close Demo?]
