--- a/modules/web-console/frontend/views/index.pug
+++ b/modules/web-console/frontend/views/index.pug
@@ -30,7 +30,12 @@ html
 
         meta(name='fragment' content='!')
 
-    body.theme-line.body-overlap(ng-class='{ "demo-mode": demoMode }')
+    body.theme-line.body-overlap(
+        ng-class='{ "demo-mode": _demo.enabled }'
+        demo-status
+        ng-ref='_demo'
+        ng-ref-read='demoStatus'
+    )
 
         .splash.splash-max-foreground(hide-on-state-change)
             .splash-wrapper
