--- a/modules/web-console/frontend/app/components/web-console-header/components/help-menu/style.scss
+++ b/modules/web-console/frontend/app/components/web-console-header/components/help-menu/style.scss
@@ -14,17 +14,18 @@
  * limitations under the License.
  */
 
-import angular from 'angular';
-import component from './component';
-import userMenu from './components/user-menu/component';
-import {component as content} from './components/web-console-header-content/component';
-import {component as demo} from './components/demo-mode-button/component';
-import {component as helpMenu} from './components/help-menu/component';
+help-menu {
+    font-size: 14px;
+    max-height: 100%;
+    display: flex;
 
-export default angular
-    .module('ignite-console.web-console-header', [])
-    .component('webConsoleHeader', component)
-    .component('webConsoleHeaderContent', content)
-    .component('helpMenu', helpMenu)
-    .component('userMenu', userMenu)
-    .component('demoModeButton', demo);
+    .caret {
+        margin-left: 8px;
+        margin-top: 3px;
+        align-self: center;
+    }
+    .help-menu__trigger {
+        display: flex;
+        max-height: 100%;
+    }
+}
