--- a/modules/web-console/frontend/app/components/web-console-header/components/help-menu/template.pug
+++ b/modules/web-console/frontend/app/components/web-console-header/components/help-menu/template.pug
@@ -13,13 +13,13 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-.web-console-header-content__right
-    .web-console-header-item(ng-if='$ctrl.showConnectedClusters')
-        connected-clusters
-    .web-console-header-item(ng-if='$ctrl.showDemoModeButton')
-        demo-mode-button
-    .web-console-header-item
-        help-menu
 
-.web-console-header-item(ng-if='$ctrl.showUserMenu')
-    user-menu
+div.help-menu__trigger(
+    ng-click='$event.stopPropagation()'
+    bs-dropdown='$ctrl.items'
+    data-placement='bottom-right'
+    data-trigger='hover focus'
+    data-container='self'
+) 
+    span Help
+    span.caret
