--- a/modules/web-console/frontend/app/components/cluster-security-icon/template.pug
+++ b/modules/web-console/frontend/app/components/cluster-security-icon/template.pug
@@ -17,13 +17,13 @@ svg(
     ng-if='$ctrl.secured'
     ignite-icon='lockClosed'
     bs-tooltip=''
-    data-title='Security Cluster'
+    data-title='Secured'
     data-placement='top'
 )
 svg(
     ng-if='!$ctrl.secured'
     ignite-icon='lockOpened'
     bs-tooltip=''
-    data-title='Non Security Cluster'
+    data-title='Unsecured'
     data-placement='top'
 )
