GG-23054 Move text resources into single file (part 1) (#463)
Add text resources file.
Enable JSON import types in TS.
Update unit tests.

The following places were translated:
Signin page.
Forgot password page.
Reset password page.
Landing page.
User profile page.
Query notebooks page.
Query notebook page.
Admin / user activities dialog.
bs-select-menu component (multiselect, used everywhere).
cluster-security-icon component (used on connected clusters dialog).
cluster-selector component (used in header of query notebook page).
connected-clusters-badge component ("My clusters: 1" in app header).
Connected clusters dialog.
Admin / create user dialog (but not the form itself, which is is a separate component shared with signup screen).
"public.pug".
app-angular.

--- a/modules/web-console/frontend/app/components/cluster-security-icon/template.pug
+++ b/modules/web-console/frontend/app/components/cluster-security-icon/template.pug
@@ -16,14 +16,12 @@
 svg(
     ng-if='$ctrl.secured'
     ignite-icon='lockClosed'
-    bs-tooltip=''
-    data-title='Secured'
+    bs-tooltip='::{title: ("clusterSecurityIconComponent.titleSecured"|translate)}'
     data-placement='top'
 )
 svg(
     ng-if='!$ctrl.secured'
     ignite-icon='lockOpened'
-    bs-tooltip=''
-    data-title='Unsecured'
+    bs-tooltip='::{title: ("clusterSecurityIconComponent.titleUnsecured"|translate)}'
     data-placement='top'
 )
